Archive2/7f/0301fb8a87baad/main.cpp
#include <iostream>
#include <sstream>
#include <boost/move/move.hpp>

int main()
{
    const std::stringstream ss("hello");
    const std::string s = boost::move(ss.str());

}